# Loan-Prediction-AI

./: .dockerignore  .gitignore  Dockerfile  Notes.md  Readme.md  cat_model.pkl  create_db.py  data.json  data_loading.md  data_range.txt  db.sqlite3  loan_explainer.py  main.py  manage.py  nlp_explainer.py  pyproject.toml  requirements.txt  test_explainer.py  verify_status.txt  verify_xai.py
Loan_prediction_AI/: asgi.py  settings.py  urls.py  wsgi.py
Project Report/: Project Report.docx
app/: admin.py  decorators.py  ml_utils.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/templates/: kyc_form.html  login.html  register.html  success.html
app/templates/Banker/: apply_view.html  banker_dashboard.html  base.html  kyc_applications.html  loan_applications.html  view_kyc.html  view_loan_details.html
app/templates/User/: apply.html  base.html  footer.html  header.html  kyc_success.html  user_dashboard.html
static/Banker/css/: style.css  user_dashboard.css
static/Banker/js/: user_dashboard.js
