[project]
name = "loan-prediction-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "catboost==1.2.10",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.7",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "django==6.0.2",
    "fonttools==4.61.1",
    "git-filter-repo>=2.47.0",
    "graphviz==0.21",
    "idna==3.11",
    "joblib==1.5.3",
    "kiwisolver==1.4.9",
    "llvmlite==0.47.0",
    "matplotlib==3.10.8",
    "mysqlclient==2.2.8",
    "narwhals==2.17.0",
    "numba==0.65.0",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "plotly==6.5.2",
    "pymysql==1.1.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "requests==2.33.1",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "shap==0.51.0",
    "six==1.17.0",
    "slicer==0.0.8",
    "sqlparse==0.5.5",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
]
